--- a/maintenance/maintenance.html
+++ b/maintenance/maintenance.html
@@ -43,11 +43,11 @@
                 <!--                <a class="text-focus-in" id="link" href="#exampleModal" data-bs-toggle="modal" >Report</a>-->
 
                 <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="reportModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Report Form</h5>
+                                <h5 class="modal-title" id="reportModalLabel">Report Form</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -97,11 +97,11 @@
                 <!--                <a class="text-focus-in" id="loginLink" href="#loginModal" data-bs-toggle="modal" >Login</a>-->
 
                 <!-- Modal -->
-                <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                                <h5 class="modal-title" id="loginModalLabel">Login</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -111,33 +111,29 @@
                                     <div class="col">
                                         <form>
                                             <div class="mb-3">
-                                                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                                <label  class="form-label">Email address</label>
+                                                <input type="email" class="form-control" id="loginInputEmail" aria-describedby="emailHelp">
                                             </div>
                                             <div class="mb-3">
-                                                <label for="exampleInputPassword1" class="form-label">Password</label>
-                                                <input type="password" class="form-control" id="exampleInputPassword1">
+                                                <label class="form-label">Password</label>
+                                                <input type="password" class="form-control" id="loginInputPassword">
                                             </div>
                                             <button type="submit" class="btn btn-primary">Submit</button>
                                         </form>
                                     </div>
-
                                 </div>
-
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <!--                    <a class="text-focus-in" id="registerLink" href="#registerModal" data-bs-toggle="modal" >Registration</a>-->
-
                     <!-- Modal -->
-                    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Registration</h5>
+                                    <h5 class="modal-title" id="registerModalLabel">Registration</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
@@ -148,15 +144,15 @@
 
                                             <form>
                                                 <div class="mb-3">
-                                                    <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                                    <input type="email" class="form-control" placeholder="Email" id="registerInputEmail1" aria-describedby="emailHelp">
                                                 </div>
 
                                                 <div class="mb-3">
-                                                    <input type="password" class="form-control" placeholder="Password" id="exampleInputPassword1">
+                                                    <input type="password" class="form-control" placeholder="Password" id="registerInputPassword">
                                                 </div>
 
                                                 <div class="mb-3">
-                                                    <input type="password" class="form-control" placeholder="Repeat Password" id="exampleInputPassword1">
+                                                    <input type="password" class="form-control" placeholder="Repeat Password" id="registerInputPassword1">
                                                 </div>
 
                                                 <button type="submit" class="btn btn-primary">Submit</button>
@@ -166,9 +162,7 @@
 
                                             <p>Please check you email inbox for registration confirmation</p>
                                         </div>
-
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -182,46 +176,47 @@
     <div class="upperPage">
         <div class="shadow-sm p-3 mb-5 bg-body rounded">
             <div class="row">
-
                 <div class="col">
 
                     <ul class="maintenance_list">
                         <h2> Requirements:</h2>
+
                         <br />
-                        <h4>User: Tom Smith 001</h4>
+                            <h4>User: Tom Smith 001</h4>
+
                         <br /><br />
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                02/02/2022, Cheltenham - bowser 005 needs refilling
-                            </label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" >
+                                <label class="form-check-label">
+                                    02/02/2022, Cheltenham - bowser 005 needs refilling
+                                </label>
+                            </div>
+
+                        <br />
+
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" >
+                                <label class="form-check-label">
+                                    02/02/2022, Cheltenham - bowser 012 has a fault
+                                </label>
+                            </div>
+
+                        <br />
+
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" >
+                                <label class="form-check-label" >
+                                    02/02/2022, Cheltenham - bowser 011 is leaking
+                                </label>
                         </div>
 
                         <br />
 
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                02/02/2022, Cheltenham - bowser 012 has a fault
-                            </label>
-                        </div>
-
-                        <br />
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                02/02/2022, Cheltenham - bowser 011 is leaking
-                            </label>
-                        </div>
-
-                        <br />
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                02/02/2022, Cheltenham - bowser 004 needs refilling
-                            </label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" >
+                                <label class="form-check-label" >
+                                    02/02/2022, Cheltenham - bowser 004 needs refilling
+                                </label>
 
                             <br />
                     </ul>
@@ -229,26 +224,19 @@
                     <br /><br />
 
                     <button type="button" class="btn btn-primary">Task Complete</button>
-
                     <br />
 
                 </div>
-
 
                 <div class="col">
                     <div class="text_area">
                         <h2>Bowser Map</h2>
                         <br />
                         <br />
-
                         <!--div to display map--->
                         <div id="map"></div>
-
                     </div>
                 </div>
-
-
-
             </div>
         </div>
 
