--- a/operations/operations.html
+++ b/operations/operations.html
@@ -42,19 +42,17 @@
 
             <div class="nav-link-wrapper">
                 <!--                <a class="text-focus-in" id="link" href="#exampleModal" data-bs-toggle="modal" >Report</a>-->
-
                 <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="reportModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Report Form</h5>
+                                <h5 class="modal-title" id="reportModalLabel">Report Form</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
 
                                 <div class="row">
-
                                     <div class="col">
                                         <p>Report Type: </p>
                                     </div>
@@ -70,7 +68,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
 
                             <div class="form-floating">
@@ -92,40 +89,34 @@
             <h2 class="text-focus-in">Bowser Hub</h2>
         </div>
 
-
         <div class="right-side">
-
             <div class="nav-link-wrapper">
                 <!--                <a class="text-focus-in" id="loginLink" href="#loginModal" data-bs-toggle="modal" >Login</a>-->
-
                 <!-- Modal -->
-                <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                                <h5 class="modal-title" id="loginModalLabel">Login</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
 
                                 <div class="row">
-
                                     <div class="col">
                                         <form>
                                             <div class="mb-3">
-                                                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                                <label class="form-label">Email address</label>
+                                                <input type="email" class="form-control" id="loginInputEmail" aria-describedby="emailHelp">
                                             </div>
                                             <div class="mb-3">
-                                                <label for="exampleInputPassword1" class="form-label">Password</label>
-                                                <input type="password" class="form-control" id="exampleInputPassword1">
+                                                <label class="form-label">Password</label>
+                                                <input type="password" class="form-control" id="loginInputPassword">
                                             </div>
                                             <button type="submit" class="btn btn-primary">Submit</button>
                                         </form>
                                     </div>
-
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -133,32 +124,30 @@
 
                 <div class="nav-link-wrapper">
                     <!--                    <a class="text-focus-in" id="registerLink" href="#registerModal" data-bs-toggle="modal" >Registration</a>-->
-
                     <!-- Modal -->
-                    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Registration</h5>
+                                    <h5 class="modal-title" id="registerModalLabel">Registration</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
 
                                     <div class="row">
-
                                         <div class="col">
 
                                             <form>
                                                 <div class="mb-3">
-                                                    <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                                    <input type="email" class="form-control" placeholder="Email" id="registerInputEmail" aria-describedby="emailHelp">
                                                 </div>
 
                                                 <div class="mb-3">
-                                                    <input type="password" class="form-control" placeholder="Password" id="exampleInputPassword1">
+                                                    <input type="password" class="form-control" placeholder="Password" id="registerInputPassword">
                                                 </div>
 
                                                 <div class="mb-3">
-                                                    <input type="password" class="form-control" placeholder="Repeat Password" id="exampleInputPassword1">
+                                                    <input type="password" class="form-control" placeholder="Repeat Password" id="registerInputPassword1">
                                                 </div>
 
                                                 <button type="submit" class="btn btn-primary">Submit</button>
@@ -168,9 +157,7 @@
 
                                             <p>Please check you email inbox for registration confirmation</p>
                                         </div>
-
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -184,7 +171,6 @@
     <div class="upperPage">
         <div class="shadow-sm p-3 mb-5 bg-body rounded">
             <div class="row">
-
                 <div class="col">
 
                     <ul class="operations-list">
@@ -219,9 +205,7 @@
                         <br />
                     </ul>
                     <br />
-
                 </div>
-
 
                 <div class="col">
                     <div class="row">
@@ -271,10 +255,8 @@
                             <button type="button" class="btn btn-primary">ADD</button>
 
                         </form>
-
                     </div>
                 </div>
-
             </div>
 
             <div class="row">
@@ -287,13 +269,8 @@
                 <div class="col">
                     <button type="button" class="btn btn-secondary">Add New User</button>
                 </div>
-
             </div>
-
         </div>
-
-
-
     </div>
 </div>
 
