--- a/maintenance/maintenance.html
+++ b/maintenance/maintenance.html
@@ -41,82 +41,8 @@
         </div>
 
         <div class="right-side">
-
             <div class="nav-link-wrapper">
-                <!--                <a class="text-focus-in" id="loginLink" href="#loginModal" data-bs-toggle="modal" >Login</a>-->
-
-                <!-- Modal -->
-                <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="loginModalLabel">Login</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-
-                                <div class="row">
-
-                                    <div class="col">
-                                        <form>
-                                            <div class="mb-3">
-                                                <label  class="form-label">Email address</label>
-                                                <input type="email" class="form-control" id="loginInputEmail" aria-describedby="emailHelp">
-                                            </div>
-                                            <div class="mb-3">
-                                                <label class="form-label">Password</label>
-                                                <input type="password" class="form-control" id="loginInputPassword">
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Submit</button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <!-- Modal -->
-                    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="registerModalLabel">Registration</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-
-                                    <div class="row">
-
-                                        <div class="col">
-
-                                            <form>
-                                                <div class="mb-3">
-                                                    <input type="email" class="form-control" placeholder="Email" id="registerInputEmail1" aria-describedby="emailHelp">
-                                                </div>
-
-                                                <div class="mb-3">
-                                                    <input type="password" class="form-control" placeholder="Password" id="registerInputPassword">
-                                                </div>
-
-                                                <div class="mb-3">
-                                                    <input type="password" class="form-control" placeholder="Repeat Password" id="registerInputPassword1">
-                                                </div>
-
-                                                <button type="submit" class="btn btn-primary">Submit</button>
-                                            </form>
-
-                                            <br /><br />
-
-                                            <p>Please check you email inbox for registration confirmation</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!--right navbar--->
             </div>
         </div>
     </div>
