--- a/maintenance/maintenance.html
+++ b/maintenance/maintenance.html
@@ -28,7 +28,7 @@
     <div class="nav-wrapper">
         <div class="left-side">
             <div class="nav-link-wrapper active-nav-link">
-                <a class="text-focus-in" href="../home/index.html">Home</a>
+                <a class="text-focus-in" href="../home/index.php">Home</a>
             </div>
 
             <div class="nav-link-wrapper active-nav-link">
