--- a/operations/operations.html
+++ b/operations/operations.html
@@ -28,7 +28,7 @@
     <div class="nav-wrapper">
         <div class="left-side">
             <div class="nav-link-wrapper active-nav-link">
-                <a class="text-focus-in" href="../home/index.html">Home</a>
+                <a class="text-focus-in" href="../home/index.php">Home</a>
             </div>
 
             <div class="nav-link-wrapper active-nav-link">
@@ -115,10 +115,10 @@
                             <br /><br />
 
                             <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                                     Worker
                                 </button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                                     <li><a class="dropdown-item" href="#">Tom</a></li>
                                     <li><a class="dropdown-item" href="#">Mary</a></li>
                                     <li><a class="dropdown-item" href="#">Carl</a></li>
